--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -30,3 +30,4 @@ jobs:
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
         PROJECT_FILE_PATH: NugetLibrary/NugetLibrary.csproj
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
