--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -29,5 +29,6 @@ jobs:
       # uses: brandedoutcast/publish-nuget@c12b8546b67672ee38ac87bea491ac94a587f7cc
       uses: brandedoutcast/publish-nuget@v2.5.5
       with:
+        PACKAGE_NAME: alp-test
         PROJECT_FILE_PATH: NugetLibrary/NugetLibrary.csproj
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
