--- a/AlpTest2/AlpTest2.csproj
+++ b/AlpTest2/AlpTest2.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Version>0.0.1-preview2</Version>
     </PropertyGroup>
 
 </Project>
